CREATE TYPE "AuditAction" AS ENUM ('LOGIN','LOGOUT','PASSWORD_CHANGED','CREATE','UPDATE','DELETE','ROLE_CHANGED','SENSOR_ASSOCIATED','INCIDENT_CREATED','INCIDENT_STATUS_CHANGED','MAINTENANCE_CREATED','MAINTENANCE_UPDATED','MAINTENANCE_DELETED','REPORT_GENERATED','REPORT_EXPORTED');
CREATE TYPE "AuditResult" AS ENUM ('SUCCESS','FAILURE');
ALTER TABLE "operational_incidents" ADD COLUMN "priority_score" DECIMAL(8,2) NOT NULL DEFAULT 0, ADD COLUMN "priority_updated_at" TIMESTAMP(3);
CREATE TABLE "audit_logs" ("id" SERIAL NOT NULL,"user_id" INTEGER,"action" "AuditAction" NOT NULL,"resource" VARCHAR(80) NOT NULL,"resource_id" VARCHAR(80),"occurred_at" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,"ip_address" VARCHAR(64),"user_agent" VARCHAR(255),"result" "AuditResult" NOT NULL DEFAULT 'SUCCESS',"metadata" JSONB,CONSTRAINT "audit_logs_pkey" PRIMARY KEY ("id"));
CREATE TABLE "maintenance_records" ("id" SERIAL NOT NULL,"machine_id" INTEGER NOT NULL,"site_id" INTEGER,"registered_by_id" INTEGER NOT NULL,"maintenance_date" TIMESTAMP(3) NOT NULL,"type" VARCHAR(80) NOT NULL,"description" VARCHAR(1200) NOT NULL,"status" VARCHAR(40) NOT NULL,"cost" DECIMAL(12,2) NOT NULL DEFAULT 0,"provider" VARCHAR(160),"next_maintenance_date" TIMESTAMP(3),"created_at" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,"updated_at" TIMESTAMP(3) NOT NULL,CONSTRAINT "maintenance_records_pkey" PRIMARY KEY ("id"));
CREATE TABLE "final_optimization_reports" ("id" SERIAL NOT NULL,"site_id" INTEGER,"machine_ids" JSONB NOT NULL,"start_date" TIMESTAMP(3) NOT NULL,"end_date" TIMESTAMP(3) NOT NULL,"generated_by_id" INTEGER NOT NULL,"generated_at" TIMESTAMP(3) NOT NULL DEFAULT CURRENT_TIMESTAMP,"summary" JSONB NOT NULL,"machine_metrics" JSONB NOT NULL,"recommendations" JSONB NOT NULL,"incident_metrics" JSONB NOT NULL,"maintenance_metrics" JSONB NOT NULL,CONSTRAINT "final_optimization_reports_pkey" PRIMARY KEY ("id"));
CREATE UNIQUE INDEX "final_optimization_reports_key" ON "final_optimization_reports"("site_id","start_date","end_date","generated_by_id");
CREATE INDEX "audit_logs_user_date_idx" ON "audit_logs"("user_id","occurred_at"); CREATE INDEX "audit_logs_action_date_idx" ON "audit_logs"("action","occurred_at"); CREATE INDEX "audit_logs_resource_date_idx" ON "audit_logs"("resource","occurred_at"); CREATE INDEX "maintenance_machine_date_idx" ON "maintenance_records"("machine_id","maintenance_date"); CREATE INDEX "maintenance_site_date_idx" ON "maintenance_records"("site_id","maintenance_date"); CREATE INDEX "incidents_priority_idx" ON "operational_incidents"("status","severity","priority_score","registration_date"); CREATE INDEX "final_reports_site_period_idx" ON "final_optimization_reports"("site_id","start_date","end_date");
ALTER TABLE "audit_logs" ADD CONSTRAINT "audit_logs_user_id_fkey" FOREIGN KEY ("user_id") REFERENCES "users"("id") ON DELETE SET NULL ON UPDATE CASCADE;
ALTER TABLE "maintenance_records" ADD CONSTRAINT "maintenance_records_machine_id_fkey" FOREIGN KEY ("machine_id") REFERENCES "machines"("id") ON DELETE RESTRICT ON UPDATE CASCADE, ADD CONSTRAINT "maintenance_records_site_id_fkey" FOREIGN KEY ("site_id") REFERENCES "sites"("id") ON DELETE SET NULL ON UPDATE CASCADE, ADD CONSTRAINT "maintenance_records_registered_by_id_fkey" FOREIGN KEY ("registered_by_id") REFERENCES "users"("id") ON DELETE RESTRICT ON UPDATE CASCADE;
ALTER TABLE "final_optimization_reports" ADD CONSTRAINT "final_reports_site_id_fkey" FOREIGN KEY ("site_id") REFERENCES "sites"("id") ON DELETE SET NULL ON UPDATE CASCADE, ADD CONSTRAINT "final_reports_generated_by_id_fkey" FOREIGN KEY ("generated_by_id") REFERENCES "users"("id") ON DELETE RESTRICT ON UPDATE CASCADE;
